samples/_failures_safe/1761372219_b818a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6042360d.c: In function ‘main’:
./samples/SAFE/__tmp_6042360d.c:154:28: error: missing terminating " character
  154 |                     printf("Error: Matrices must have same
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6042360d.c:154:21: error: expected expression at end of input
  154 |                     printf("Error: Matrices must have same
      |                     ^~~~~~
./samples/SAFE/__tmp_6042360d.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6042360d.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6042360d.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6042360d.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6042360d.c:154:21: error: expected declaration or statement at end of input
